--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.+' apply(false)
+    id 'net.fabricmc.loom' version '1.7.64'
     id 'maven-publish'
 }
 
@@ -26,12 +26,16 @@ subprojects {
         }
     }
 
-    apply plugin: 'fabric-loom'
+    apply plugin: 'net.fabricmc.loom' // 保持与主项目一致的Loom插件配置
 
     archivesBaseName = project(':').archives_base_name
     setVersion(project.mod_version)
 
     repositories {
+        maven {
+            url "https://maven.fabricmc.net/"
+        }
+        mavenCentral()
     }
 
     dependencies {
@@ -56,6 +60,15 @@ subprojects {
         from("LICENSE") {
             rename { "${it}_${project.archivesBaseName}"}
         }
+    }
+}
+
+project(":Fabric-1.21") {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+
+    tasks.withType(JavaCompile).configureEach {
+        it.options.release = 21
     }
 }
 
